# personal-task-assistant

./: README.md  pyproject.toml
src/agent/: agent.py
src/personal_task_assistant/: __init__.py
src/tasks/: __init__.py  sqlite_task_repository.py  task.py  task_db.py  task_repository.py
src/tools/: __init__.py  current_time.py  tasks_tool.py
tests/: conftest.py
tests/tasks/: test_sqlite_task_repository.py
